Rename files for caco and guam

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,27 @@ CACO-01/csv/image copy log 06-09-2022 11_11_06.csv
 CACO-02/csv/image copy log 02-09-2022 07_38_44.csv
 CACO-02/csv/image copy log 02-09-2022 07_58_07.csv
 CACO-02/csv/image copy log 06-09-2022 12_15_40.csv
+CACO-01/csv/image copy log 06-02-2023 16_38_09.csv
+CACO-01/csv/image copy log 06-02-2023 16_33_31.csv
+CACO-01/csv/image copy log 06-02-2023 16_32_02.csv
+CACO-01/csv/image copy log 06-02-2023 16_31_26.csv
+CACO-01/csv/image copy log 06-02-2023 16_30_48.csv
+CACO-01/csv/image copy log 06-02-2023 16_30_25.csv
+CACO-01/csv/image copy log 06-02-2023 16_29_41.csv
+CACO-01/csv/image copy log 06-02-2023 16_29_30.csv
+CACO-01/csv/image copy log 06-02-2023 16_28_46.csv
+CACO-01/csv/image copy log 06-02-2023 16_28_05.csv
+CACO-01/csv/image copy log 06-02-2023 16_26_59.csv
+CACO-01/csv/image copy log 06-02-2023 16_25_59.csv
+CACO-01/csv/image copy log 06-02-2023 16_25_23.csv
+CACO-01/csv/image copy log 06-02-2023 16_24_50.csv
+CACO-01/csv/image copy log 06-02-2023 16_24_32.csv
+CACO-01/csv/image copy log 06-02-2023 16_20_20.csv
+CACO-01/csv/image copy log 06-02-2023 16_18_59.csv
+CACO-01/csv/image copy log 06-02-2023 16_15_15.csv
+CACO-01/csv/image copy log 06-02-2023 16_13_07.csv
+CACO-01/csv/image copy log 06-02-2023 16_12_46.csv
+CACO-01/csv/image copy log 06-02-2023 16_11_42.csv
+CACO-01/csv/image copy log 06-02-2023 16_11_04.csv
+CACO-01/csv/image copy log 06-02-2023 16_07_41.csv
+CACO-01/csv/image copy log 06-02-2023 17_08_45.csv
